--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <!-- jQuery 2.0.2 -->
         <script src="js/jquery.js"></script>
         <!-- jQuery UI 1.10.3 -->
-        <script src="js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+        <script src="js/jquery-ui-1.10.3.js" type="text/javascript"></script>
         <!-- Bootstrap -->
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.js" type="text/javascript"></script>
         <!-- Morris.js charts -->
         <!--
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
@@ -88,8 +88,12 @@
         <script src="js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
         -->
 
+        <script src="js/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+
         <!-- AdminLTE App -->
+        <!--
         <script src="js/AdminLTE/app.js" type="text/javascript"></script>
+        -->
 
         {{=view.anchor.footerScripts}}
 
