--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>{{=view.title}}</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
         <!-- bootstrap 3.0.2 -->
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <!-- font Awesome -->
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <!-- Ionicons -->
-        <link href="css/ionicons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/ionicons.min.css" rel="stylesheet" type="text/css" />
         <!-- Morris chart -->
         <!--
         <link href="css/morris/morris.css" rel="stylesheet" type="text/css" />
@@ -31,7 +31,7 @@
         <link href="css/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css" />
         -->
         <!-- Theme style -->
-        <link href="css/AdminLTE.css" rel="stylesheet" type="text/css" />
+        <link href="/css/AdminLTE.css" rel="stylesheet" type="text/css" />
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,11 +48,11 @@
         {{=view.anchor.body}}
 
         <!-- jQuery 2.0.2 -->
-        <script src="js/jquery.js"></script>
+        <script src="/js/jquery.js"></script>
         <!-- jQuery UI 1.10.3 -->
-        <script src="js/jquery-ui-1.10.3.js" type="text/javascript"></script>
+        <script src="/js/jquery-ui-1.10.3.js" type="text/javascript"></script>
         <!-- Bootstrap -->
-        <script src="js/bootstrap.js" type="text/javascript"></script>
+        <script src="/js/bootstrap.js" type="text/javascript"></script>
         <!-- Morris.js charts -->
         <!--
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
@@ -88,7 +88,7 @@
         <script src="js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
         -->
 
-        <script src="js/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+        <script src="/js/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
 
         <!-- AdminLTE App -->
         <!--
